# CircuitPython_tts

./: CustomizeCP.md  Dockerfile  LICENSE  README.rst  README.rst.license  mpy-cross-macos-9.2.0-beta.0-19-g66e289dd3c-arm64  pyproject.toml  requirements.txt  tts.py
_.github/workflows/: release_gh.yml
examples/: tts_simpletest.py
